# harness-garnish

./: .gitignore  AGENTS.md  Cargo.toml  README.md
docs/: README.md  adapter-contracts.md  architecture.md  cli-acceptance.md  cli-bible.md  cli-mvp-exit-report.md  cli-mvp.md  cli-package-exit-report.md  cli-user-acceptance.md  data-model.md  installation.md  mvp-acceptance.md  operator-guide.md  phase-0-discovery.md  phase-1-exit-report.md  phase-2-exit-report.md  phase-2-linux-container-conformance.md  phase-2-linux-midpoint.md  phase-2-plan.md  phase-2-wsl2-exit.md  phase-3-exit-report.md  phase-3-plan.md  phase-4-live-api-checkpoint.md  phase-4-live-codex-checkpoint.md  phase-4-plan.md  phase-4-portability-checkpoint.md  policy-model.md  tb0-acceptance.md  tb0-command-contract.md  tb0-exit-report.md  tb0-gap-matrix.md  tb0-schema-migration.md  tb0-state-contracts.md  tb1-acceptance.md  tb1-cli-testing.md  tb1-exit-report.md  threat-model.md
scripts/: check-command-placeholders  package-release  test-docker-conformance  test-linux-midpoint  test-phase4-portability  test-podman-conformance  test-real-api-patch-smoke  test-real-api-smoke  test-real-codex-subscription-smoke  test-release-package  test-tb0-contract  test-tb1-cli  test-wsl2-exit  write-api-smoke-receipt  write-codex-smoke-receipt
src/: adapters.rs  api_pricing.rs  api_providers.rs  db.rs  domain.rs  evidence.rs  git.rs  lib.rs  main.rs  notifications.rs  policy.rs  process.rs  projections.rs  quota.rs  routing.rs  schedule.rs  secrets.rs  service.rs  web_ui.rs
tests/: cli_json.rs  mvp_vertical_slice.rs  (+2 more)
(+22 files in other folders)
